--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=zidship
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=fmh123FMH
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
